--- a/learnopengl.vcxproj.filters
+++ b/learnopengl.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="01_gettingstarted\triangle.cpp">
       <Filter>Source Files\GettingStarted</Filter>
     </ClCompile>
+    <ClCompile Include="01_gettingstarted\shaders_practice.cpp">
+      <Filter>Source Files\GettingStarted</Filter>
+    </ClCompile>
+    <ClCompile Include="01_gettingstarted\textures.cpp">
+      <Filter>Source Files\GettingStarted</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaders.h">
@@ -62,6 +68,21 @@
       <Filter>Source Files\GettingStarted</Filter>
     </None>
     <None Include="01_gettingstarted\triangle_vs.glsl">
+      <Filter>Source Files\GettingStarted</Filter>
+    </None>
+    <None Include="01_gettingstarted\shaders_vs.glsl">
+      <Filter>Source Files\GettingStarted</Filter>
+    </None>
+    <None Include="01_gettingstarted\shaders_fs.glsl">
+      <Filter>Source Files\GettingStarted</Filter>
+    </None>
+    <None Include="01_gettingstarted\shaders_uniform_fs.glsl">
+      <Filter>Source Files\GettingStarted</Filter>
+    </None>
+    <None Include="01_gettingstarted\shaders_attributes_vs.glsl">
+      <Filter>Source Files\GettingStarted</Filter>
+    </None>
+    <None Include="01_gettingstarted\shaders_attributes_fs.glsl">
       <Filter>Source Files\GettingStarted</Filter>
     </None>
   </ItemGroup>
