--- a/learnopengl.vcxproj
+++ b/learnopengl.vcxproj
@@ -154,10 +154,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="01_gettingstarted\shaders_practice.cpp" />
+    <ClCompile Include="01_gettingstarted\stb_image.cpp" />
     <ClCompile Include="01_gettingstarted\textures.cpp" />
     <ClCompile Include="01_gettingstarted\triangle.cpp" />
     <ClCompile Include="01_gettingstarted\_getting_started.cpp" />
-    <ClCompile Include="glad33.c" />
+    <ClCompile Include="glad33.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="glad43.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -179,9 +185,16 @@
     <None Include="01_gettingstarted\shaders_fs.glsl" />
     <None Include="01_gettingstarted\shaders_uniform_fs.glsl" />
     <None Include="01_gettingstarted\shaders_vs.glsl" />
+    <None Include="01_gettingstarted\textures_fs.glsl" />
+    <None Include="01_gettingstarted\textures_vs.glsl" />
     <None Include="01_gettingstarted\triangle_color2_fs.glsl" />
     <None Include="01_gettingstarted\triangle_fs.glsl" />
     <None Include="01_gettingstarted\triangle_vs.glsl" />
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\crate1_diffuse.png" />
+    <Image Include="textures\greendragon.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
