--- a/learnopengl.vcxproj.filters
+++ b/learnopengl.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="01_gettingstarted\stb_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="helpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaders.h">
