--- a/learnopengl.vcxproj
+++ b/learnopengl.vcxproj
@@ -170,6 +170,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="helpers.cpp" />
     <ClCompile Include="shaders.cpp" />
     <ClCompile Include="tests.cpp" />
     <ClCompile Include="_main.cpp" />
